2016-10-07 Nemea-modules-2.4.3
        * added sipbf2idea reporter

2016-10-04 Nemea-modules-2.4.2
        * flow_meter:
		added arp plugin
		bugfixes in http and ntp plugin
	* other bugfixes

2016-08-05 Nemea-modules-2.4.1
	* package:
		fixed dependencies (remove nemea-py*)
	* flow_meter:
		code revision
		memory optimizations
		fixing byte order issues
	* endiverter:
		coding style
		bugfixes

2016-07-28 Nemea-modules-2.4.0
	* report2idea modules:
		replaced python wrapper with pytrap
	* miner_detector:
		add reporter module
	* json_dump, json_replay:
		replaced python wrapper with pytrap
	* flow_meter:
		optimization and improvement
		add NTP plugin
	* endiverter:
		add converter of UniRec message from OpenWRT
	* email_reporter:
		replaced python wrapper with pytrap
	* device_classifier:
		add beta version of module
		installation must be fixed
	* debug_sender:
		replaced python wrapper with pytrap

2016-06-03 Nemea-modules-2.3.6
        * logger:
		improved error messages
		changed order of functions during initialization
	* bruteforce2idea:
		bugfix
	* amplification2idea.py:
		added "Source.Type"="Backscatter"

2016-04-14 Nemea-modules-2.3.5
        * nfdump_reader: 
		fixed timestamps when libnf is used
	* Anonymizer: 
		removed progress printing, disabled strict-aliasing


2016-04-03 Nemea-modules-2.3.4
        * report2idea dnstunnel bugfixed
	* flow_meter bugfixed


2016-03-20 Nemea-modules-2.3.3
        * flow_meter sip plugin bugfixed - no longer causes segfault
	* many smaller bugfixes


2016-03-16 Nemea-modules-2.3.2
        * debug_sender can now be installed properly
	* added install README for:
		nfreader
		email_reporter
		debug_sender
		merger

2016-03-14 Nemea-modules-2.3.1
        * Added modules:
		reporter for brute_force_detector
        * bugfixes

2016-03-10 Nemea-modules-2.3
        * Added modules:
		reporter for ipblacklistfilter
	* documentation for creating flow_meter plugins
	* bugfixes


2016-02-28 Nemea-modules-2.2
	* Added modules: